# QuanEstimation

./: .gitignore  404.html  AUTHORS.rst  HISTORY.rst  Makefile  index.html  juliacalldeps.json  juliapkg.json  mkdocs.yml  objects.inv  pyproject.toml  setup.cfg  setup.py  sitemap.xml
.github/workflows/: ci.yml
citing/: index.html
developers/: index.html
docs/src/: developers.md  examples.md  index.md  installation.md
examples/: index.html
guide/guide_Compopt/: index.html
guide/guide_Copt/: index.html
guide/guide_Mopt/: index.html
guide/guide_Sopt/: index.html
guide/guide_adaptive/: index.html
guide/guide_bounds/: index.html
guide/guide_dynamics/: index.html
guide/guide_import/: index.html
guide/guide_pyju/: index.html
guide/guide_resources/: index.html
guide/output_files/: index.html
installation/: index.html
quanestimation/: __init__.py
quanestimation/AdaptiveScheme/: Adapt.py  Adapt_MZI.py
quanestimation/AsymptoticBound/: AnalogCramerRao.py  CramerRao.py
quanestimation/BayesianBound/: BayesCramerRao.py  BayesEstimation.py  ZivZakai.py
quanestimation/Common/: Common.py  _julia_project.py
quanestimation/ComprehensiveOpt/: AD_Compopt.py  ComprehensiveStruct.py  DE_Compopt.py  (+1 more)
scripts/: verify_bridge.py
search/: search_index.json
test/: conftest.py  test_AnalogCramerRao.py  test_BayesCramerRao.py  test_BayesEstimation.py  test_Common.py  test_CramerRao.py  test_Parameterization.py  test_Resource.py  test_ZivZakai.py  test_analytic_qfim.py  test_basic.py  test_crosslang_consistency.py  test_operator_definitions.py  utils.py
(+113 files in other folders)
